--- a/advice-generator-app-main/style.css
+++ b/advice-generator-app-main/style.css
@@ -24,6 +24,7 @@ body {
 body {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   color: var(--lightCyan);
   background-color: var(--darkBlue);
   font-family: "Manrope", sans-serif;
@@ -33,11 +34,12 @@ main {
   width: 100%;
   height: 100vh;
   padding: 1rem;
+  flex-direction: column;
+
 }
 
 .flexCol {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -46,6 +48,7 @@ main {
   margin: auto;
   border-radius: 5px;
   position: relative;
+  flex-direction: column;
   padding: 1rem 2rem 3rem;
   box-shadow: 0 10px 10px rgb(0 0 0 / 0.5);
   background-color: var(--darkGreyishBlue);
@@ -64,18 +67,25 @@ main {
 }
 
 #die {
-  padding: 1rem;
-  position: absolute;
-  border-radius: 50%;
   top: 85%;
-  width: 50px;
-  height: 50px;
+  width: 50px; 
+  height: 50px;  
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;  
+  border-radius: 50%;  
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); 
+  cursor: pointer;
   background: var(--neonGreen);
   transition: transform 0.3s;
 }
 
-#die:hover {
-  cursor: pointer;
+ 
+#die img{
+  width: 30px; 
+  height: 30px;
 }
 
 .rotate {
@@ -106,7 +116,7 @@ main {
   color: var(--neonGreen);
 }
 
-/** for large screens */
+/** large screens */
 @media (min-width: 768px) {
   .container {
     max-width: 40rem;
